chore(CodeEditor): add additional styles for example and container

--- a/src/patternfly/components/CodeEditor/code-editor.scss
+++ b/src/patternfly/components/CodeEditor/code-editor.scss
@@ -83,6 +83,12 @@
   }
 }
 
+.#{$code-editor}__container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
 .#{$code-editor}__header {
   position: relative;
   display: flex;
