--- a/src/patternfly/components/CodeEditor/code-editor-code.hbs
+++ b/src/patternfly/components/CodeEditor/code-editor-code.hbs
@@ -1,6 +1,6 @@
-<code dir="ltr" class="{{pfv}}code-editor__code{{#if code-editor-code--modifier}} {{code-editor-code--modifier}}{{/if}}"
+<div dir="ltr" class="{{pfv}}code-editor__code{{#if code-editor-code--modifier}} {{code-editor-code--modifier}}{{/if}}"
   {{#if code-editor-code--attribute}}
     {{{code-editor-code--attribute}}}
   {{/if}}>
   {{> @partial-block}}
-</code>
+</div>
