--- a/src/patternfly/components/CodeEditor/code-editor-container.hbs
+++ b/src/patternfly/components/CodeEditor/code-editor-container.hbs
@@ -1,3 +1,3 @@
-<div role="presentation" tabIndex="0" class="{{pfv}}code-editor-container">
+<div role="presentation" tabindex="0" class="{{pfv}}code-editor__container">
   {{> @partial-block}}
 </div>
