--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -259,8 +259,9 @@
   &.pf-m-sticky-header {
     position: relative;
 
-    thead:where(.#{$table}__thead) tr:where(.#{$table}__tr) {
-      > :where(th, td) {
+    .#{$table}__thead .#{$table}__tr {
+      > .#{$table}__th,
+      > .#{$table}__td {
         z-index: var(--#{$table}--m-sticky-header--cell--ZIndex); // set z-index here to allow sticky column to override
       }
     }
@@ -279,8 +280,8 @@
       border-block-end: 0; // hard reset tr borders in nested headers
 
       // stylelint-disable max-nesting-depth
-      th:where(.#{$table}__th),
-      td:where(.#{$table}__td) {
+      .#{$table}__th,
+      .#{$table}__td {
         &:not([rowspan]) {
           --#{$table}--cell--PaddingBlockEnd: var(--#{$table}__thead--m-nested-column-header__tr--PaddingBlockEnd);
         }
@@ -312,77 +313,6 @@
     }
   }
 
-  // - Table th - Table td
-  tr:where(.#{$table}__tr) > :where(th, td) {
-    @include pf-v6-hidden-visible(var(--#{$table}--cell--hidden-visible--Display));
-
-    position: relative;
-    width: var(--#{$table}--cell--Width);
-    min-width: var(--#{$table}--cell--MinWidth);
-    max-width: var(--#{$table}--cell--MaxWidth);
-    padding-block-start: var(--#{$table}--cell--PaddingBlockStart);
-    padding-block-end: var(--#{$table}--cell--PaddingBlockEnd);
-    padding-inline-start: var(--#{$table}--cell--PaddingInlineStart);
-    padding-inline-end: var(--#{$table}--cell--PaddingInlineEnd);
-
-    // default settings
-    overflow: var(--#{$table}--cell--Overflow);
-    font-size: var(--#{$table}--cell--FontSize);
-    font-weight: var(--#{$table}--cell--FontWeight);
-    line-height: var(--#{$table}--cell--LineHeight);
-    color: var(--#{$table}--cell--Color);
-    text-overflow: var(--#{$table}--cell--TextOverflow);
-    word-break: var(--#{$table}--cell--WordBreak);
-    white-space: var(--#{$table}--cell--WhiteSpace);
-
-    // First child padding left
-    &:first-child {
-      padding-inline-start: var(--#{$table}--cell--first-last-child--PaddingInline);
-    }
-
-    // Last child padding right
-    &:last-child {
-      padding-inline-end: var(--#{$table}--cell--first-last-child--PaddingInline);
-    }
-
-    &.pf-m-center {
-      text-align: center;
-    }
-
-    &:is(:empty, .#{$table}__cell-empty) {
-      width: auto;
-      min-width: 0;
-      padding: 0;
-    }
-
-    &.pf-m-help {
-      --#{$table}--cell--MinWidth: var(--#{$table}--cell--m-help--MinWidth);
-    }
-
-    &.pf-m-favorite {
-      --#{$table}__button--Color: var(--#{$table}--cell--m-favorite--Color);
-      --#{$table}__sort--MinWidth: fit-content;
-      --#{$table}--cell--MaxWidth: fit-content;
-      --#{$table}--cell--Overflow: visible;
-    }
-
-    &.pf-m-border-right::before,
-    &.pf-m-border-left::before {
-      position: absolute;
-      inset: 0;
-      pointer-events: none;
-      content: "";
-    }
-
-    &.pf-m-border-right::before {
-      border-inline-end: var(--#{$table}--cell--m-border-right--before--BorderInlineEndWidth) solid var(--#{$table}--cell--m-border-right--before--BorderInlineEndColor);
-    }
-
-    &.pf-m-border-left::before {
-      border-inline-start: var(--#{$table}--cell--m-border-left--before--BorderInlineStartWidth) solid var(--#{$table}--cell--m-border-left--before--BorderInlineStartColor);
-    }
-  }
-
   // - Table caption
   caption:where(.#{$table}__caption) {
     padding-block-start: var(--#{$table}__caption--PaddingBlockStart);
@@ -410,9 +340,9 @@
         outline-offset: var(--#{$table}__thead--m-nested-column-header--button--OutlineOffset);
       }
 
-      tr:where(.#{$table}__tr):not(:first-child) {
-        th:where(.#{$table}__th),
-        td:where(.#{$table}__td) {
+      .#{$table}__tr:not(:first-child) {
+        .#{$table}__th,
+        .#{$table}__td {
           &:not([rowspan]) {
             --#{$table}--cell--PaddingBlockStart: var(--#{$table}__thead--m-nested-column-header__tr--PaddingBlockStart);
           }
@@ -436,7 +366,8 @@
     --#{$table}--cell--PaddingBlockEnd: var(--#{$table}__tbody--cell--PaddingBlockEnd);
     --#{$table}--cell--FontSize: var(--#{$table}__tbody--cell--FontSize);
 
-    > tr:where(.#{$table}__tr) > :where(th, td) {
+    > .#{$table}__tr > .#{$table}__th,
+    > .#{$table}__tr > .#{$table}__td {
       overflow-wrap: break-word;
     }
   }
@@ -461,7 +392,8 @@
     min-width: var(--#{$table}__sort--MinWidth);
   }
 
-  :where(.#{$table}__th, .#{$table}__td) {
+  .#{$table}__th,
+  .#{$table}__td {
     &.pf-m-help {
       min-width: var(--#{$table}__th--m-help--MinWidth);
     }
@@ -600,6 +532,78 @@
   }
 }
 
+// - Table th - Table td
+.#{$table}__th,
+.#{$table}__td {
+  @include pf-v6-hidden-visible(var(--#{$table}--cell--hidden-visible--Display));
+
+  position: relative;
+  width: var(--#{$table}--cell--Width);
+  min-width: var(--#{$table}--cell--MinWidth);
+  max-width: var(--#{$table}--cell--MaxWidth);
+  padding-block-start: var(--#{$table}--cell--PaddingBlockStart);
+  padding-block-end: var(--#{$table}--cell--PaddingBlockEnd);
+  padding-inline-start: var(--#{$table}--cell--PaddingInlineStart);
+  padding-inline-end: var(--#{$table}--cell--PaddingInlineEnd);
+
+  // default settings
+  overflow: var(--#{$table}--cell--Overflow);
+  font-size: var(--#{$table}--cell--FontSize);
+  font-weight: var(--#{$table}--cell--FontWeight);
+  line-height: var(--#{$table}--cell--LineHeight);
+  color: var(--#{$table}--cell--Color);
+  text-overflow: var(--#{$table}--cell--TextOverflow);
+  word-break: var(--#{$table}--cell--WordBreak);
+  white-space: var(--#{$table}--cell--WhiteSpace);
+
+  // First child padding left
+  &:first-child {
+    padding-inline-start: var(--#{$table}--cell--first-last-child--PaddingInline);
+  }
+
+  // Last child padding right
+  &:last-child {
+    padding-inline-end: var(--#{$table}--cell--first-last-child--PaddingInline);
+  }
+
+  &.pf-m-center {
+    text-align: center;
+  }
+
+  &:is(:empty, .#{$table}__cell-empty) {
+    width: auto;
+    min-width: 0;
+    padding: 0;
+  }
+
+  &.pf-m-help {
+    --#{$table}--cell--MinWidth: var(--#{$table}--cell--m-help--MinWidth);
+  }
+
+  &.pf-m-favorite {
+    --#{$table}__button--Color: var(--#{$table}--cell--m-favorite--Color);
+    --#{$table}__sort--MinWidth: fit-content;
+    --#{$table}--cell--MaxWidth: fit-content;
+    --#{$table}--cell--Overflow: visible;
+  }
+
+  &.pf-m-border-right::before,
+  &.pf-m-border-left::before {
+    position: absolute;
+    inset: 0;
+    pointer-events: none;
+    content: "";
+  }
+
+  &.pf-m-border-right::before {
+    border-inline-end: var(--#{$table}--cell--m-border-right--before--BorderInlineEndWidth) solid var(--#{$table}--cell--m-border-right--before--BorderInlineEndColor);
+  }
+
+  &.pf-m-border-left::before {
+    border-inline-start: var(--#{$table}--cell--m-border-left--before--BorderInlineStartWidth) solid var(--#{$table}--cell--m-border-left--before--BorderInlineStartColor);
+  }
+}
+
 // - Table text
 .#{$table}__text {
   --#{$table}--cell--MaxWidth: 100%;
@@ -620,7 +624,8 @@
     --#{$table}--cell--MinWidth: 100%;
     --#{$table}--text--MinWidth: var(--#{$table}--m-truncate__text--MinWidth);
 
-    > :where(th, td) {
+    > .#{$table}__th,
+    > .#{$table}__td {
       overflow: var(--#{$table}--cell--Overflow);
       text-overflow: var(--#{$table}--cell--TextOverflow);
       white-space: var(--#{$table}--cell--WhiteSpace);
@@ -686,22 +691,22 @@
 
   .#{$table} thead:where(.#{$table}__thead).pf-m-nowrap &,
   .#{$table} tr:where(.#{$table}__tr).pf-m-nowrap &,
-  .#{$table} th:where(.#{$table}__th).pf-m-nowrap & {
+  .#{$table} .#{$table}__th.pf-m-nowrap & {
     grid-template-columns: min-content max-content;
   }
 
   .#{$table} thead:where(.#{$table}__thead).pf-m-fit-content &,
   .#{$table} tr:where(.#{$table}__tr).pf-m-fit-content &,
-  .#{$table} th:where(.#{$table}__th).pf-m-fit-content & {
+  .#{$table} .#{$table}__th.pf-m-fit-content & {
     grid-template-columns: fit-content max-content;
   }
 
   .#{$table} thead:where(.#{$table}__thead).pf-m-wrap &,
   .#{$table} tr:where(.#{$table}__tr).pf-m-wrap &,
-  .#{$table} th:where(.#{$table}__th).pf-m-wrap &,
+  .#{$table} .#{$table}__th.pf-m-wrap &,
   .#{$table} thead:where(.#{$table}__thead).pf-m-truncate &,
   .#{$table} tr:where(.#{$table}__tr).pf-m-truncate &,
-  .#{$table} th:where(.#{$table}__th).pf-m-truncate & {
+  .#{$table} .#{$table}__th.pf-m-truncate & {
     grid-template-columns: auto max-content;
   }
 }
@@ -831,7 +836,6 @@
   --#{$table}__button--hover--Color: var(--#{$table}__compound-expansion-toggle__button--hover--Color);
 
   position: relative;
-  padding: 0;
   background-color: var(--#{$table}__compound-expansion-toggle__button--BackgroundColor);
 
   // show left border, use __text to truncate content
@@ -950,8 +954,8 @@
     }
   }
 
-  td:where(.#{$table}__td),
-  th:where(.#{$table}__th) {
+  .#{$table}__td,
+  .#{$table}__th {
     &.pf-m-no-padding {
       padding-block-start: 0;
       padding-block-end: 0;
@@ -1005,7 +1009,7 @@
 
   // - Table compact thead
   thead:where(.#{$table}__thead) {
-    th:where(.#{$table}__th),
+    .#{$table}__th,
     .#{$table}__toggle {
       --#{$table}--cell--PaddingBlockStart: var(--#{$table}--m-compact__th--PaddingBlockStart);
       --#{$table}--cell--PaddingBlockEnd: var(--#{$table}--m-compact__th--PaddingBlockEnd);
